--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
     <section id="user-goals">
       <h2>My goals for 2021</h2>
-      <input v-model="goalInput" type="text" />
+      <input v-on:keyup.enter="addGoal" v-model="goalInput" type="text" />
       <button v-on:click="addGoal">Add Goal</button>
       <p v-if="goals.length === 0">No goals have been added yet - please start adding some!</p>
       <ul v-else>
