--- a/index.html
+++ b/index.html
@@ -20,13 +20,12 @@
       <h2>My goals for 2021</h2>
       <input v-on:keyup.enter="addGoal" v-model="goalInput" type="text" />
       <button v-on:click="addGoal">Add Goal</button>
-      <p v-if="goals.length === 0">No goals have been added yet - please start adding some!</p>
+      <p v-if="goals.length === 0">
+        No goals have been added yet - please start adding some!
+      </p>
       <ul v-else>
-        <li  v-for="(goal, index) in goals">{{ goal }} - {{ index }}</li>
+        <li v-for="(goal, index) in goals" v-on:click="removeGoal(index)">{{ goal }} - {{ index }}</li>
       </ul>
-      <!-- <ul>
-        <li v-for="num in 20"> {{ num }}</li>
-      </ul> -->
       <!-- <ul>
         <li v-for="(value, key) in person">{{ key }}: {{ value }}</li>
       </ul> -->
