--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       </p>
       <ul v-else>
         <li v-for="(goal, index) in goals" v-on:click="removeGoal(index)">{{ goal }} - {{ index }}</li>
+        <button v-on:click="removeAll">Remove all items.</button>
       </ul>
       <!-- <ul>
         <li v-for="(value, key) in person">{{ key }}: {{ value }}</li>
